<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">

        <ListPreference
            app:defaultValue="celsius"
            app:entries="@array/temperature_unit_entries"
            app:entryValues="@array/temperature_unit_values"
            app:key="temperature_unit"
            app:title="@string/temperature_unit"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="500"
            app:entries="@array/interval_entries"
            app:entryValues="@array/interval_values"
            app:key="update_interval"
            app:title="@string/update_interval"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="top_right"
            app:entries="@array/position_entries"
            app:entryValues="@array/position_values"
            app:key="overlay_position"
            app:title="@string/default_position"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="is_draggable"
            app:summary="@string/drag_to_move_summary"
            app:title="@string/drag_to_move" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/storage_data_location">

        <Preference
            app:key="storage_location"
            app:title="@string/storage_location_title"
            app:summary="@string/storage_location_summary" />

        <Preference
            app:key="migrate_data"
            app:title="@string/migrate_data_title"
            app:summary="@string/migrate_data_summary" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="auto_export_to_external"
            app:summary="@string/auto_export_summary"
            app:title="@string/auto_export_title" />

        <Preference
            app:key="game_relocator"
            app:title="@string/game_relocator_title"
            app:summary="@string/game_relocator_summary" />

        <Preference
            app:key="clean_cache"
            app:title="@string/clean_cache_title"
            app:summary="@string/clean_cache_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:key="version"
            app:summary="1.2.0"
            app:title="@string/version" />

        <Preference
            app:key="github"
            app:summary="https://github.com/andikachan/TakoStats"
            app:title="GitHub Repository" />

    </PreferenceCategory>

</PreferenceScreen>
